# python-uci

./: LICENSE  README.md  pyproject.toml
uci_chess/: __init__.py  core.py  engine.py
